# fortnite_notifications

./: .gitignore  README.md  add_tg.bat  get_screen.py  main.py  pyproject.toml  seeds.json  send_notification.py  set_notifications.bat  setup_telegram.py  start.bat  toggle_seed_notifications.py
